feat(database): 添加数据库配置和实体处理器功能
- 新增 AbsDruidConfig 接口实现数据库连接池配置
- 修改实体处理器使用统一字段常量替代硬编码字符串
- 移除分页和防攻击插件配置以简化数据库操作
- 更新抽象服务类返回类型为Long
- 标记AnalysisController为废弃状态
- 配置SQLite数据源作为默认数据库
- 添加数据库键值对实体和相关服务
- 实现自动实体处理器记录创建和更新用户
- 新增自动计划配置实体类及转换方法
- 重构自动计划服务使用数据库持久化存储
- 更新控制器使用新的数据访问模式

chore(deps): 添加动态数据源依赖版本配置

- 在 pom.xml 中新增 dynamic-datasource.version 属性配置
- 版本号设置为 4.0.0 以支持多数据源功能需求

refactor(core): 移除待办注释并优化代码结构

- 移除了 AbsApiSign 类中的 TODO 注释
- 移除了 GitHubTreeFetcher 类中的 TODO 注释
- 清理了双对称加密相关的注释标记
- 优化了代码的可读性和维护性

feat(entity): 添加实体创建和更新时间及操作人自动填充功能

- 在插入操作时自动填充创建时间和更新时间字段
- 在插入操作时自动填充创建人和更新人字段
- 在更新操作时自动填充更新时间字段
- 在更新操作时自动填充更新人字段
- 继承并扩展基础实体处理器的时间戳处理逻辑
- 集成用户ID获取机制用于操作人字段填充

feat(entity): 使用驼峰命名填充实体字段

- 引入 StrUtil 工具类进行字段名转换
- 将创建时间和更新时间字段转换为驼峰命名格式
- 在插入操作中同时填充创建人和更新人信息
- 在更新操作中使用驼峰命名格式更新更新人字段
- 继承父类的填充逻辑并增强字段命名转换功能

feat(mybatis-plus): 添加MyBatis-Plus基础框架功能

- 新增AbsEntity接口实现实体转Map功能
- 新增AbsEntityHandler接口处理元对象填充逻辑
- 新增AbsMybatisPlusConfig配置接口及分页插件配置
- 新增BaseEntity抽象基类包含创建更新时间字段
- 新增EntityHandler组件实现自动填充功能
- 新增MpIService接口和服务实现类MpServiceImpl
- 新增MpMapper接口作为基础Mapper
- 新增MpObjectUtils工具类处理对象空值判断
- 新增PageUtils工具类处理分页和驼峰转换
- 新增SearchEntity搜索基类支持参数解析
- 新增TreeEntity树形结构基类
- 配置MybatisPlusConfig自动化配置类
- 在父项目pom.xml中添加framework-mybatis-plus模块
- 集成PageHelper分页插件和Druid连接池支持